# literature-ingest

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt
literature-ingest/: pmc.py
literature_ingest/: cli.py  pmc.py
notebooks/: ai_notebook.ipynb  botulinum_toxin_studies.csv  combo_search_results_deduplicated.json  json_parse.ipynb  preprocesing.ipynb  search_results_2.json
src/literature_ingest/: archive_cli.py  cli.py  data_engineering.py  extra_cli.py  gcs_retrieval.py  migration.py  models.py  normalization.py  pipelines.py  pmc.py  pubmed.py
src/literature_ingest.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/literature_ingest/utils/: config.py
tests/: conftest.py
tests/integration/: test_data_engineering.py  test_pmc.py
tests/resources/: PMC10335194.xml  PMC3671108.xml  PMC3717426.xml  PMC_test_10.xml  PMC_test_4.xml  PMC_test_5.xml  PMC_test_6.xml  PMC_test_7.xml  PMC_test_8.xml  PMC_test_9.xml  pubmed_sample.xml
tests/unit/: test_data_engineering.py  test_pmc.py  test_pubmed.py
